--- a/config/locales/locales.yml
+++ b/config/locales/locales.yml
@@ -53,6 +53,10 @@ ca:
   date:
     formats:
       default: '%d/%m/%Y'
+  time:
+    formats:
+      tiny: "%k:%M"
+      tiny_on_the_hour: "%k:%M"
   number:
     currency:
       format:
