fix: fallback to first available student rubric if no instructor assessment exists #539

--- a/config/locales/zh-Hant.yml
+++ b/config/locales/zh-Hant.yml
@@ -26434,7 +26434,7 @@ zh-Hant:
   select_requirement_count_e0948936: 選擇需求數量
   select_requirement_type_bf9a39d9: 選擇需求類型
   select_role_aa5cfd69: 選擇角色
-  select_rubric_2aa2ffa2: 選擇評量指標
+  select_rubric_2aa2ffa2: 選擇評量結果
   select_rubric_display_type_15bf2af1: 選擇評量指標的顯示類型
   select_sections_to_post_to_type_or_use_arrow_keys__902a41ed: 選擇要發佈到的分班。輸入或使用箭頭鍵導航。允許複選。
   select_specific_content_5382e7ea: 選擇特定內容
