fix: Revise Grade Quiz translation #503

--- a/config/locales/zh-Hant.yml
+++ b/config/locales/zh-Hant.yml
@@ -14266,7 +14266,7 @@ zh-Hant:
   graded_discussion_submission_6ee4187e: 計分討論繳交
   graded_on_submission_60ac3010: 繳交時已標記
   graded_on_time_submissions_80a3c6b: 已評分的準時繳交項目
-  graded_quiz_7fabdf1f: 已標記的測驗
+  graded_quiz_7fabdf1f: 評分測驗
   graded_submissions_1363409e: 已評分的繳交項目
   graded_submissions_9c7068a2: 評分提交項目：
   graded_survey_c0f0c395: 評分調查
